add mendeley bib

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -16,3 +16,7 @@ It fits pretty much on one page and is definitely not longer.}
 \section{My Section}
 \subsection{My Subsection}
 \subsubsection{My SubSubsection}
+\section{Bibliography}
+\bibliography{Talk7/library}
+\nocite{*}
+\bibliographystyle{ieeetr}
