Implement basic report structure

--- a/Talk7/Seminar-Arbeit.tex
+++ b/Talk7/Seminar-Arbeit.tex
@@ -12,10 +12,17 @@ It fits pretty much on one page and is definitely not longer.}
 \minitoc %table of contents
 
 \newpage
+\input{Talk7/01_introduction/01_introduction}
 
-\section{My Section}
-\subsection{My Subsection}
-\subsubsection{My SubSubsection}
+\newpage
+\input{Talk7/02_background/02_background}
+
+\newpage
+\input{Talk7/03_related_work/03_related_work}
+
+\newpage
+\input{Talk7/04_final_considerations/04_final_considerations}
+
 \section{Bibliography}
 \bibliography{Talk7/library}
 \nocite{*}
