Bullets for PKI and DNS

--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -1,9 +1,9 @@
 \subsection{Public Key Infrastructure (PKI)}
 
-\textbf{Length: 2-3 pages}
+\textbf{Length: around 3 pages}
 
 \begin{itemize}
-  \item Introduce PKI and provide an intuition for existing PKI systems
+  \item Introduce PKI and provide an intuition for existing PKI systems and their challenges
   \item Motivate the role of PKI for cybersecurity (foundational principle)
   \item Present threats and vulnerabilities that are common and specific to PKI
 \end{itemize}
@@ -11,19 +11,21 @@
 \subsubsection{Decentralized PKI}
 
 \begin{itemize}
-  \item TODO:
+  \item Provide an intuition on why centralization could lead to cybersecurity problems
+  \item Present different approaches to the decentralization of PKI based on blockchain technologies and describe how trust and security can be achieved in such a decentralized system
+  \item Discuss improvements to verification by the application of rich credentials on a blockchain PKI as a concrete application example
 \end{itemize}
 
 \subsubsection{Blockchain approaches to web certification}
 
 \begin{itemize}
-  \item Present an approach of web certification using Ethereum smart contracts
-  \item Shortly discuss certificate and revocation transparency in general, as well as an approach based on blockchain
-  \item
+  \item Discuss the potential of web certification using Ethereum smart contracts
+  \item Shortly elaborate on certificate and revocation transparency in general, as well as an approach based on blockchain
 \end{itemize}
 
-\subsubsection{Keyless Signature Infrastructure with blockchain}
+\subsubsection{Keyless Signature Infrastructure (KSI) with blockchain}
 
 \begin{itemize}
-  \item TODO:
+  \item Shortly introduce KSI and its significance in a PKI context
+  \item Show how KSI could be enhanced by the application of blockchain technologies
 \end{itemize}
