--- a/Talk7/03_related_work/03-3_dns.tex
+++ b/Talk7/03_related_work/03-3_dns.tex
@@ -1,6 +1,20 @@
-\subsection{Domain Name System (DNS)}
+\subsection{Internet Infrastructure (DNS / BGP)}
+
+\textbf{Length: around 2 pages}
 
 \begin{itemize}
-  \item Length: 2-3 pages
-  \item TODO:
+  \item Provide a short overview of the internet infrastructure with DNS/BGP, corresponding threats, and security mechanisms
+\end{itemize}
+
+\subsubsection{Decentralized DNS}
+\begin{itemize}
+  \item Describe how blockchain-based DNS systems implement and enhance traditional DNS protocols
+  \item Describe how domain management could work in such a distributed setting (i.e., if there are no central parties)
+  \item Discuss security benefits of decentralizing DNS with blockchain when compared to traditional approaches
+\end{itemize}
+
+\subsubsection{BGP}
+\begin{itemize}
+  \item Short excursion on how BGP could be implemented on a blockchain basis
+  \item Discuss the benefits and big challenges of applying the blockchain to low-level internet infrastructure like BGP (scalability, performance, etc.)
 \end{itemize}
