Add bullet points for cybersecurity

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -2,5 +2,10 @@
 
 \begin{itemize}
   \item Length: 2-3 pages
-  \item TODO:
+  \item Definition of Cybersecurity
+  \item Information security vs. Cyber security
+  \item Authentication and Authorization
+  \item Cryptography?
+  \item Cost-Benefit Analysis, Risk Analysis
+  \item Attack possibilities (Worms, Viruses, Trojan Horses, Bugs, Botnets)
 \end{itemize}
