Add bullet points for ddos

--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -2,5 +2,15 @@
 
 \begin{itemize}
   \item Length: 3-4 pages
-  \item TODO:
+  \item What is DDoS?
+  \begin{itemize}
+    \item Differences DoS and DDoS
+  \end{itemize}
+  \item General Introduction about possibility of DDoS attacks
+  \item Mitigation Possibilities
+  \begin{itemize}
+    \item DDos Mitigation with Smart Contracts
+    \item Mitigation-as-a-service
+    \item Blockchain Signaling System (BloSS)
+  \end{itemize}
 \end{itemize}
