add iot bullet points

--- a/Talk7/03_related_work/03-4_iot.tex
+++ b/Talk7/03_related_work/03-4_iot.tex
@@ -4,5 +4,7 @@
 
 \begin{itemize}
   \item Length: 2-3 pages
-  \item TODO:
+  \item Secure IoT ecosystem with blockchain
+  \item Smart Home use case
+  \item Ensure data integrity of IoT datasets
 \end{itemize}
