adds bulletpoints to talk 7, chapters 2.2 and  3.5

--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -2,5 +2,17 @@
 
 \begin{itemize}
   \item Length: around 2 pages
-  \item TODO:
+  \item Definition of Blockchain
+  \item Technical Advantages and Disadvantages
+  \item Reason for popularity
+  \item Common Scenarios for usage
+  \subitem Crypto-Currencies
+  \subitem Supply Chain Management (SCM)
+  \subitem Payment and Money Transactions
+  \subitem Smart Contracts 
+  \subitem Decentralized Autonomous Organizations (DAO)
+  \subitem Proof of Ownership
+  \subitem E-Voting
+   \subitem IoT
+
 \end{itemize}
