--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -3,6 +3,23 @@
 % TODO: improve section title
 
 \begin{itemize}
-  \item Length: 3-4 pages
-  \item TODO:
+\item Length: 3-4 pages
+\item Applications that are related on a second level
+\item Not a direct implication for CS measures
+\item Instead, BC helps to secure the security of a system
+Different classes of applications:
+\item Applications related to the fields of evaluated according to the following criteria:
+\subitem Quality of the System: Advantages and Disadvantages
+\subitem Is there an absolute need for BC or could this problem be solved without?
+\subitem Relation to Cybersecurity and Security of related systems
+\item The following sections are to be explored further
+\subitem E-Voting \cite{Osgood2016} \cite{BenAyed2017a}
+\subitem Automonous Vehicles \cite{Dorri2017b} \cite{Rowan2017a}
+\subitem Personal Data Protection \cite{Zyskind2015a}
+\subitem Personal Data Sharing and Patient Monitoring \cite{Yue2016a}
+\subitem Smart Cities and IoT \cite{Biswas2016a}
+\subitem Communication \cite{Rowan2017a}
+\subitem Power Transaction
+\subitem Data Exchange
+
 \end{itemize}
