--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -80,18 +80,18 @@ pmid = {28912202},
 title = {{Blockchain Technology: Beyond Bitcoin}},
 year = {2016}
 }
-@article{Sakwa2011a,
-abstract = {Is blockchain the revolution in security and transparency that is needed to enable e-voting and, if so, what are the implications for the future of democracy? Despite the digitalisation of several important aspects of modern life, elections are still largely conducted offline, on paper. Since the turn of the century, e-voting has been considered a promising and (eventually) inevitable development, which could speed up, simplify and reduce the cost of elections, and might even lead to higher voter turnouts and the development of stronger democracies. E-voting could take many forms: using the internet or a dedicated, isolated network; requiring voters to attend a polling station or allowing unsupervised voting; using existing devices, such as mobile phones and laptops, or requiring specialist equipment. Now we have a further choice; to continue trusting central authorities to manage elections or to use blockchain technology to distribute an open voting record among citizens. Many experts agree that e-voting would require revolutionary developments in security systems. The debate is whether blockchain will represent a transformative or merely incremental development, and what its implications could be for the future of democracy.},
-author = {Sakwa, Richard},
+@article{Osgood2016,
+abstract = {Blockchain voting could have many tangible benefits and could be the catalyst needed to propel voting to the 21st century. This paper will first analyze the problems with current voting techniques and showcase the vulnerabilities of a current voting machine. Then, the engineering of the blockchain and its benefits will be discussed and current work being done on blockchain voting, as well as progress and challenges of widespread adoption.},
+author = {Osgood, Ryan},
 doi = {10.1111/j.1477-7053.2011.01348.x},
+file = {:Users/lenzbaumann/Library/Application Support/Mendeley Desktop/Downloaded/Sakwa - 2011 - The Future of Russian Democracy.pdf:pdf},
 issn = {0017-257X},
-journal = {Government and Opposition},
-number = {04},
-pages = {517--537},
-title = {{The Future of Russian Democracy}},
-volume = {46},
-year = {2011}
+mendeley-groups = {Applications},
+title = {{The Future of Democracy}},
+year = {2016}
 }
+
+
 @article{Wust2017a,
 abstract = {! Abstract—Blockchain is being praised as a technological innovation which allows to revolutionize how society trades and interacts. This rep-utation is in particular attributable to its properties of allowing mutually mistrusting entities to exchange financial value and interact without rely-ing on a trusted third party. A blockchain moreover provides an integrity protected data storage and allows to provide process transparency. In this article we critically analyze whether a blockchain is indeed the appropriate technical solution for a particular application scenario. We differentiate between permissionless (e.g., Bitcoin/Ethereum) and permissioned (e.g. Hyperledger/Corda) blockchains and contrast their properties to those of a centrally managed database. We provide a structured methodology to determine the appropriate technical solution to solve a particular application problem. Given our methodology, we an-alyze in depth three use cases — Supply Chain Management, Interbank and International Payments, and Decentralized Autonomous Organiza-tions and conclude the article with an outlook for further opportunities.},
 author = {W{\"{u}}st, Karl and Gervais, Arthur},
