Adds introduction paragraph to Chapter 'Specific Applications'

--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -1,7 +1,7 @@
 \subsection{Specific Applications}
 
 % TODO: improve section title
-
+In this section we take a closer look at applications that are linked to cybersecurity on a secondary level: Here the BC is not per se used to mitigate direct cybersecurity threats, but is used to make applications more robust, error-prone and less vulnerable. So the BC does solve cybersecurity related issues, but in a more indirect way.
 \begin{itemize}
 \item Length: 3-4 pages
 \item Applications that are related on a second level
@@ -14,7 +14,7 @@ Different classes of applications:
 \subitem Relation to Cybersecurity and Security of related systems
 \item The following sections are to be explored further
 \subitem E-Voting \cite{Osgood2016} \cite{BenAyed2017a}
-\subitem Automonous Vehicles \cite{Dorri2017b} \cite{Rowan2017a}
+\subitem Automonous Vehicles \cite{Dorri2017} \cite{Rowan2017a}
 \subitem Personal Data Protection \cite{Zyskind2015a}
 \subitem Personal Data Sharing and Patient Monitoring \cite{Yue2016a}
 \subitem Smart Cities and IoT \cite{Biswas2016a}
