adds my part of the summary to the introduction file

--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -17,5 +17,6 @@
   \begin{itemize}
     \item Content structure
     \item Covered topics
+    \item{Goal of this survey is then not only to cover pure theoretical concepts or frameworks, but also to shed some light on existing real world applications or proposed system architectures that are currently beeing developed. These applications will show us whether the theoretical ideas and concepts are actually applicable in the real world as well as the associated problems and issues that arise therewith.} 
   \end{itemize}
 \end{itemize}
