--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -2,10 +2,11 @@
 
 \begin{itemize}
   \item Length: 2-3 pages
-  \item Definition of Cybersecurity
-  \item Information security vs. Cyber security
-  \item Authentication and Authorization
-  \item Cryptography?
-  \item Cost-Benefit Analysis, Risk Analysis
-  \item Attack possibilities (Worms, Viruses, Trojan Horses, Bugs, Botnets)
+  \item Definition of Cybersecurity (\cite{Bishop2003b} and \cite{Bishop2004})
+  \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
+  \item Information security vs. Cyber security (\cite{VonSolms2013})
+  \item Authentication and Authorization (\cite{Bishop2004} and \cite{Pfleeger2014})
+  \item Cryptography? (\cite{Bishop2004} and \cite{Pfleeger2014})
+  \item Cost-Benefit Analysis, Risk Analysis (\cite{Bishop2004})
+  \item Attack possibilities (Worms, Viruses, Trojan Horses, Bugs, Botnets) (\cite{Bishop2004} and \cite{Pfleeger2014})
 \end{itemize}
