--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -2,15 +2,16 @@
 
 \begin{itemize}
   \item Length: 3-4 pages
-  \item What is DDoS?
+  \item What is DDoS? (\cite{Bishop2004})
   \begin{itemize}
     \item Differences DoS and DDoS
   \end{itemize}
-  \item General Introduction about possibility of DDoS attacks
+  \item General Introduction about possibility of DDoS attacks (\cite{Bishop2004})
   \item Mitigation Possibilities
   \begin{itemize}
-    \item DDos Mitigation with Smart Contracts
-    \item Mitigation-as-a-service
-    \item Blockchain Signaling System (BloSS)
+    \item DDos Mitigation with Smart Contracts (\cite{Rodrigues2017})
+    \item Mitigation-as-a-service in cooperative network defenses (\cite{Mannhart2018})
+    \item Blockchain Signaling System (BloSS) (\cite{Rodrigues})
+    \item Multi domain DDoS Mitgiation based on blockchains (\cite{Rodrigues2017a})
   \end{itemize}
 \end{itemize}
