more on smart contracts und iot

--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -2,5 +2,18 @@
 
 \begin{itemize}
   \item Length: around 2 pages
-  \item TODO:
+  \item Smart contracts and ethereum
+\end{itemize}
+
+This section will look at the concept of smart contracts in the concept of ethereum.
+Ethereum is a blockchain ''with built in programming language''. Nodes in the ethereum network make up the EVM (Ethereum virtual machine).
+
+Code written to be executed on the Ethereum network is what is called smart contracts.
+Ethereum comes with a turing complete programming language
+
+\begin{itemize}
+  \item gas
+  \item contract transactions
+  \item contract state  
+  \item smart contracts example
 \end{itemize}
