--- a/Talk7/03_related_work/03-4_iot.tex
+++ b/Talk7/03_related_work/03-4_iot.tex
@@ -4,7 +4,9 @@
 
 \begin{itemize}
   \item Length: 2-3 pages
-  \item Secure IoT ecosystem with blockchain
-  \item Smart Home use case
-  \item Ensure data integrity of IoT datasets
+  \item IoT blockchain solutions \cite{Khan2018}
+  \item Secure IoT ecosystem with blockchain \cite{Banerjee2018}
+  \item DNS with blockchain \cite{Duan2018}
+  \item Smart Home use case \cite{Dorri2017a}
+  \item Ensure data integrity of IoT datasets \cite{Kshetri}
 \end{itemize}
