--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -1,22 +1,22 @@
 \section{Introduction}
 
+\textbf{Length: around 2 pages}
+
 \begin{itemize}
-  \item Length: around 2 pages
   \item Describe current issues in cybersecurity
   \begin{itemize}
     \item Motivate the topic in general
-    \item TODO:
   \end{itemize}
   \item Provide some reasoning on the evolution of bitcoin
   \begin{itemize}
     \item Money transfer security
     \item Intermediaries
-    \item TODO:
   \end{itemize}
   \item Provide an outline of the paper
   \begin{itemize}
     \item Content structure
     \item Covered topics
-    \item{Goal of this survey is then not only to cover pure theoretical concepts or frameworks, but also to shed some light on existing real world applications or proposed system architectures that are currently beeing developed. These applications will show us whether the theoretical ideas and concepts are actually applicable in the real world as well as the associated problems and issues that arise therewith.} 
   \end{itemize}
 \end{itemize}
+
+Goal of this survey is then not only to cover pure theoretical concepts or frameworks, but also to shed some light on existing real world applications or proposed system architectures that are currently beeing developed (\ref{subsec:03_applications}). These applications will show us whether the theoretical ideas and concepts are actually applicable in the real world as well as the associated problems and issues that arise therewith.
