--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -1,7 +1,8 @@
 \subsection{Cybersecurity}
 
+\textbf{Length: 2-3 pages}
+
 \begin{itemize}
-  \item Length: 2-3 pages
   \item Definition of Cybersecurity (\cite{Bishop2003b} and \cite{Bishop2004})
   \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
   \item Information security vs. Cyber security (\cite{VonSolms2013})
