--- a/Talk7/02_background/02_background.tex
+++ b/Talk7/02_background/02_background.tex
@@ -9,6 +9,7 @@
 \input{Talk7/02_background/02-3_smart_contracts}
 
 \begin{itemize}
+  \item \textbf{End of section 2}
   \item shortly summarize the section
   \item introduce the upcoming content (filler)
 \end{itemize}
