--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -1,9 +1,11 @@
 \subsection{Specific Applications}
+\label{subsec:03_applications}
 
-% TODO: improve section title
+\textbf{Length: 3-4 pages}
+
 In this section we take a closer look at applications that are linked to cybersecurity on a secondary level: Here the BC is not per se used to mitigate direct cybersecurity threats, but is used to make applications more robust, error-prone and less vulnerable. So the BC does solve cybersecurity related issues, but in a more indirect way.
+
 \begin{itemize}
-\item Length: 3-4 pages
 \item Applications that are related on a second level
 \item Not a direct implication for CS measures
 \item Instead, BC helps to secure the security of a system
