--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -6,22 +6,25 @@
 
 \subsection{Summary}
 
+\textbf{Length: around 1 page}
+
 \begin{itemize}
-  \item Length: around 1 page
   \item shortly summarize the overall work
   \item show the main thesis
 \end{itemize}
 
 \subsection{Discussion}
 
+\textbf{Length: around 1 page}
+
 \begin{itemize}
-  \item Length: around 1 page
   \item discuss any open questions about the contents
 \end{itemize}
 
 \subsection{Outlook}
 
+\textbf{Length: around 1 page}
+
 \begin{itemize}
-  \item Length: around 1 page
   \item describe possible topics of further research
 \end{itemize}
