--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -1,7 +1,8 @@
 \subsection{Blockchain}
 
+\textbf{Length: around 2 pages}
+
 \begin{itemize}
-  \item Length: around 2 pages
   \item Definition of Blockchain
   \item Technical Advantages and Disadvantages
   \item Reason for popularity
@@ -9,7 +10,7 @@
   \subitem Crypto-Currencies
   \subitem Supply Chain Management (SCM)
   \subitem Payment and Money Transactions
-  \subitem Smart Contracts 
+  \subitem Smart Contracts
   \subitem Decentralized Autonomous Organizations (DAO)
   \subitem Proof of Ownership
   \subitem E-Voting
