--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -1,19 +1,17 @@
 \subsection{Smart Contracts}
 
-\begin{itemize}
-  \item Length: around 2 pages
-  \item Smart contracts and ethereum
-\end{itemize}
+\textbf{Length: around 2 pages}
 
 This section will look at the concept of smart contracts in the concept of ethereum.
-Ethereum is a blockchain ''with built in programming language''. Nodes in the ethereum network make up the EVM (Ethereum virtual machine).
+Ethereum is a blockchain ''with built-in programming language''. Nodes in the ethereum network make up the EVM (Ethereum virtual machine).
 
 Code written to be executed on the Ethereum network is what is called smart contracts.
 Ethereum comes with a turing complete programming language
 
 \begin{itemize}
+  \item Smart contracts and ethereum
   \item gas
   \item contract transactions
-  \item contract state  
+  \item contract state
   \item smart contracts example
 \end{itemize}
