--- a/Talk7/03_related_work/03-4_iot.tex
+++ b/Talk7/03_related_work/03-4_iot.tex
@@ -1,9 +1,8 @@
 \subsection{Internet of Things (IoT)}
 
-% TODO: improve section title
+\textbf{Length: 2-3 pages}
 
 \begin{itemize}
-  \item Length: 2-3 pages
   \item IoT blockchain solutions \cite{Khan2018}
   \item Secure IoT ecosystem with blockchain \cite{Banerjee2018}
   \item DNS with blockchain \cite{Duan2018}
