--- a/Talk7/03_related_work/03_related_work.tex
+++ b/Talk7/03_related_work/03_related_work.tex
@@ -1,6 +1,8 @@
 \section{Related Work}
 
-
+\begin{itemize}
+  \item provide an overview of the section structure and contents (filler)
+\end{itemize}
 
 \input{Talk7/03_related_work/03-1_ddos}
 \input{Talk7/03_related_work/03-2_pki_ksi}
@@ -8,3 +10,8 @@
 \input{Talk7/03_related_work/03-4_iot}
 \input{Talk7/03_related_work/03-5_applications}
 
+\begin{itemize}
+  \item \textbf{End of section 3}
+  \item shortly summarize the section
+  \item introduce the upcoming content (filler)
+\end{itemize}
