--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -19,4 +19,14 @@
   \end{itemize}
 \end{itemize}
 
+TODO: summarize background
+
+TODO: summarize ddos
+
+TODO: summarize pki/ksi
+
+TODO: summarize dns
+
+TODO: summarize IoT
+
 Goal of this survey is then not only to cover pure theoretical concepts or frameworks, but also to shed some light on existing real world applications or proposed system architectures that are currently beeing developed (\ref{subsec:03_applications}). These applications will show us whether the theoretical ideas and concepts are actually applicable in the real world as well as the associated problems and issues that arise therewith.
