--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -20,6 +20,8 @@
 \end{itemize}
 
 TODO: summarize background
+Due to the increase of collecting data within the internet such as using IoT devices and the reliance on computer systems, protecting such data has become to play a major role. Multiple computer systems have to be mitigated of attacks or thefts.
+
 
 TODO: summarize ddos
 
