Start with DDoS introduction

--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -20,10 +20,11 @@
 \end{itemize}
 
 TODO: summarize background
-Due to the increase of collecting data within the internet such as using IoT devices and the reliance on computer systems, protecting such data has become to play a major role. Multiple computer systems have to be mitigated of attacks or thefts.
+Due to the increase of collecting data within the internet such as using IoT devices and the reliance on computer systems, protecting such data has become to play a major role. Multiple computer systems have to be protected of attacks or thefts.
 
 
 TODO: summarize ddos
+Distributed denial of service attacks (DDoS) which figure as an extension of single denial of service attacks (DoS), are a possibility for attackers to overflood a service of a company, specifically for eCommerce websites. Such attacks could lead to a long downtime of a system and thus result in a major business forfeit.
 
 TODO: summarize pki/ksi
 
