--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -19,12 +19,11 @@
   \end{itemize}
 \end{itemize}
 
-TODO: summarize background
-Due to the increase of collecting data within the internet such as using IoT devices and the reliance on computer systems, protecting such data has become to play a major role. Multiple computer systems have to be protected of attacks or thefts.
+Due to the increase of data collection in the internet and the growinh reliance on computer systems, protecting data as well as systems has become to play a major role. The rise of blockchain systems in the past decade has naturally led security researchers to start evaluating how traditional infrastructure can be protected in a blockchain context. The main goal of this work is therefore to investigate and summarize such approaches as far as they have been developed in recent years.
 
+To establish a solid foundation of knowledge, the next section \ref{sec:02_background} provides a summary of the most important basic concepts and background. More specifically, section \ref{subsec:02_cybersecurity} goes into the traditional concepts of cybersecurity and the main threat models that have been developed in the past decades. Section \ref{subsec:02_blockchain} then presents the basics of blockchain on the example of Bitcoin, while section \ref{subsec:02_smart_contracts} summarizes smart contract technologies that are based on the blockchain.
 
-TODO: summarize ddos
-Distributed denial of service attacks (DDoS) which figure as an extension of single denial of service attacks (DoS), are a possibility for attackers to overflood a service of a company, specifically for eCommerce websites. Such attacks could lead to a long downtime of a system and thus result in a major business forfeit.
+On a lower, more technical level, this work focuses on the prevention of DDoS attacks, as well as the improvement of parts of the internet infrastructure. Distributed denial of service attacks (DDoS) which figure as an extension of denial of service attacks (DoS), are a possibility for attackers to overflood a service of a company. Such attacks could lead to a long downtime of a system and thus result in a major business forfeit. Approaches to DDoS protection using blockchain technologies are summarized in section \ref{subsec:03_ddos}.
 
 TODO: summarize pki/ksi
 
