--- a/Talk7/02_background/02_background.tex
+++ b/Talk7/02_background/02_background.tex
@@ -1,4 +1,5 @@
 \section{Background}
+\label{sec:02_background}
 
 \begin{itemize}
   \item provide an overview of the section structure and contents (filler)
