more on ethereum

--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -6,7 +6,7 @@
 \end{itemize}
 
 This section will look at the concept of smart contracts in the concept of ethereum.
-Ethereum is a blockchain ''with built in programming language''. Nodes in the ethereum network make up the EVM (Ethereum virtual machine).
+Ethereum is a blockchain ''with built in programming language'', or a ''consensus-based globally executed virtual machine''. Nodes in the ethereum network make up the EVM (Ethereum virtual machine).
 
 Code written to be executed on the Ethereum network is what is called smart contracts.
 Ethereum comes with a turing complete programming language
