--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -4,7 +4,7 @@
 \textbf{Length: around 3 pages}
 
 \begin{itemize}
-  \item Introduce PKI and provide an intuition for existing PKI systems and their challenges
+  \item Introduce PKI and provide an intuition for existing PKI systems and their challenges \cite{Straub2006}
   \item Motivate the role of PKI for cybersecurity (foundational principle)
   \item Present threats and vulnerabilities that are common and specific to PKI
 \end{itemize}
@@ -13,20 +13,20 @@
 
 \begin{itemize}
   \item Provide an intuition on why centralization could lead to cybersecurity problems
-  \item Present different approaches to the decentralization of PKI based on blockchain technologies and describe how trust and security can be achieved in such a decentralized system
+  \item Present different approaches to the decentralization of PKI based on blockchain technologies and describe how trust and security can be achieved in such a decentralized system \cite{Ali2016} \cite{Dong2018} \cite{Dong2018a}
   \item Discuss improvements to verification by the application of rich credentials on a blockchain PKI as a concrete application example
 \end{itemize}
 
 \subsubsection{Blockchain approaches to web certification}
 
 \begin{itemize}
-  \item Discuss the potential of web certification using Ethereum smart contracts
-  \item Shortly elaborate on certificate and revocation transparency in general, as well as an approach based on blockchain
+  \item Discuss the potential of web certification using Ethereum smart contracts \cite{Moosavi1993}
+  \item Shortly elaborate on certificate and revocation transparency in general, as well as an approach based on blockchain \cite{Wang2018}
 \end{itemize}
 
 \subsubsection{Keyless Signature Infrastructure (KSI) with blockchain}
 
 \begin{itemize}
-  \item Shortly introduce KSI and its significance in a PKI context
-  \item Show how KSI could be enhanced by the application of blockchain technologies
+  \item Shortly introduce KSI and its significance in a PKI context \cite{Buldas2013}
+  \item Show how KSI could be enhanced by the application of blockchain technologies \cite{Jamthagen2017}
 \end{itemize}
