--- a/Talk7/03_related_work/03-3_internet.tex
+++ b/Talk7/03_related_work/03-3_internet.tex
@@ -4,18 +4,18 @@
 \textbf{Length: around 2 pages}
 
 \begin{itemize}
-  \item Provide a short overview of the internet infrastructure with DNS/BGP, corresponding threats, and security mechanisms
+  \item Provide a short overview of the internet infrastructure with DNS/BGP, corresponding threats, and security mechanisms \cite{Atkins2004}
 \end{itemize}
 
 \subsubsection{Decentralized DNS}
 \begin{itemize}
-  \item Describe how blockchain-based DNS systems implement and enhance traditional DNS protocols
+  \item Describe how blockchain-based DNS systems implement and enhance traditional DNS protocols \cite{Ali2016} \cite{Hari2016} \cite{Wang2018a} \cite{Dong2018a} \cite{Benshoof2016} \cite{Duan2018}
   \item Describe how domain management could work in such a distributed setting (i.e., if there are no central parties)
   \item Discuss security benefits of decentralizing DNS with blockchain when compared to traditional approaches
 \end{itemize}
 
 \subsubsection{BGP}
 \begin{itemize}
-  \item Short excursion on how BGP could be implemented on a blockchain basis
+  \item Short excursion on how BGP could be implemented on a blockchain basis \cite{Bozic2017}
   \item Discuss the benefits and big challenges of applying the blockchain to low-level internet infrastructure like BGP (scalability, performance, etc.)
 \end{itemize}
