--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -29,6 +29,7 @@ A critical part of internet and communications security in today's environment i
 
 Next to secure communications, the internet infrastructure is also susceptible to attacks on a networking-level. The DNS and BGP protocols are key parts of the majority of communications over the internet. Improving the reliability and security of these protocols has been one of the first application areas of blockchain in cybersecurity, as the inherent decentralization of blockchain could solve many of the problems found in said protocols. Section \ref{subsec:03_dns} summarizes approaches that have been presented so far. We specifically focus on the DNS infrastructure, but also include a short excursion into the less-researched BGP infrastructure.
 
-TODO: summarize IoT
+The emergence of IoT (Internet of Things) and a further growing market in interconnected devices provides interesting challenges and use cases for the usage of blockchain in the contecxt of securing IoT.\\
+Section \ref{subsec:03_IoT} reviews some security and privacy challenges of IoT and how they can be mitigated with blockchain technology. It provides an overview how blockchain can help with proving integrity of IoT generated data such as smart meters or along a supply chain, how blockchain can be used to secure a smart home, and other ways how blockchain can strengthen the security of IoT in the current state of research.
 
 Goal of this survey is then not only to cover pure theoretical concepts or frameworks, but also to shed some light on existing real world applications or proposed system architectures that are currently beeing developed (\ref{subsec:03_applications}). These applications will show us whether the theoretical ideas and concepts are actually applicable in the real world as well as the associated problems and issues that arise therewith.
