fix references with question mark

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -4,7 +4,7 @@
 \textbf{Length: 2-3 pages}
 
 \begin{itemize}
-  \item Definition of Cybersecurity (\cite{Bishop2003b} and \cite{Bishop2004})
+  \item Definition of Cybersecurity (\cite{Bishop2003} and \cite{Bishop2004})
   \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
   \item Information security vs. Cyber security (\cite{VonSolms2013})
   \item Authentication and Authorization (\cite{Bishop2004} and \cite{Pfleeger2014})
