--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -13,7 +13,7 @@
   \begin{itemize}
     \item DDos Mitigation with Smart Contracts (\cite{Rodrigues2017})
     \item Mitigation-as-a-service in cooperative network defenses (\cite{Mannhart2018})
-    \item Blockchain Signaling System (BloSS) (\cite{Rodrigues})
+    \item Blockchain Signaling System (BloSS) (\cite{Rodrigues2019})
     \item Multi domain DDoS Mitgiation based on blockchains (\cite{Rodrigues2017a})
   \end{itemize}
 \end{itemize}
