--- a/Talk7/03_related_work/03-5_applications.tex
+++ b/Talk7/03_related_work/03-5_applications.tex
@@ -15,12 +15,12 @@ Different classes of applications:
 \subitem Is there an absolute need for BC or could this problem be solved without?
 \subitem Relation to Cybersecurity and Security of related systems
 \item The following sections are to be explored further
-\subitem E-Voting \cite{Osgood2016} \cite{BenAyed2017a}
-\subitem Automonous Vehicles \cite{Dorri2017} \cite{Rowan2017a}
-\subitem Personal Data Protection \cite{Zyskind2015a}
-\subitem Personal Data Sharing and Patient Monitoring \cite{Yue2016a}
-\subitem Smart Cities and IoT \cite{Biswas2016a}
-\subitem Communication \cite{Rowan2017a}
+\subitem E-Voting \cite{Osgood2016} \cite{BenAyed2017}
+\subitem Automonous Vehicles \cite{Dorri2017} \cite{Rowan2017}
+\subitem Personal Data Protection \cite{Zyskind2015}
+\subitem Personal Data Sharing and Patient Monitoring \cite{Yue2016}
+\subitem Smart Cities and IoT \cite{Biswas2016}
+\subitem Communication \cite{Rowan2017}
 \subitem Power Transaction
 \subitem Data Exchange
 
