Starting with cybersecurity

--- a/Talk7/02_background/02-1_cybersecurity.tex
+++ b/Talk7/02_background/02-1_cybersecurity.tex
@@ -1,8 +1,38 @@
 \subsection{Cybersecurity}
 \label{subsec:02_cybersecurity}
 
-\textbf{Length: 2-3 pages}
+\subsubsection{Definition}
 
+When introducing the term cybersecurity in a first step, we need to focus on security in general. Security is hard to define as no universally agreed definition exists. A possible definition of security may be the state in which there is no relevant threat or security breach. As it is not possible to enumerate all possible threats or to verify their nonexistence, security cannot be measured in a meaningful way. Security, in general, is very individual depending on the person and her willingness to take risks, which can be perceived differently by other people. All in all, security refers to protection against \textbf{intended} incidents and attacks \cite{Bishop2004, Pfleeger2014}.
+
+Additionally, security has to be disassociated from the term safety, where the latter refers to \textbf{unintended} incidents and attacks \cite{Bishop2004}.
+
+\subsubsection{CIA Triangle}
+Generally, the security objectives consist of the following triangle, also called the C-I-A-triangle, as stated in \cite{Bishop2004}. Combining these three aspects a computer will become valuable for a user. However, there are three possible ways to harm this value.
+\begin{itemize}
+    \item Confidentiality: As the use of computers in sensitive fields such as industry, military or government has grown, keeping information secrets has become major importance. Also, assets can only be viewed by authorized users. E.g., a thief gains access to users data.
+    \item Integrity: An asset is modified only by authorized users. E.g., a thief gains access to data and modifies its content.
+    \item Availability: Any authorized party may use an asset. E.g., a thief steals a computer, and the user has no longer access.
+\end{itemize}
+
+\subsubsection{Cyber Security history}
+
+\subsubsection{Information security vs. cybersecurity}
+
+
+\subsection{Attack possibilites}
+
+
+
+
+
+
+
+
+
+
+
+\textbf{Length: 2-3 pages}
 \begin{itemize}
   \item Definition of Cybersecurity (\cite{Bishop2003} and \cite{Bishop2004})
   \item Description of the history of cyber security (\cite{Hansen2016} and \cite{Bishop2004})
